# calpdf

./: .gitignore  README.md  pyproject.toml
src/calpdf/: __main__.py  cli.py  common.py  dlcover.py  optimize.py  output.py  replace.py  toc.py
tests/: conftest.py  test_common.py  test_consistency.py  test_dlcover.py  test_optimize.py  test_replace.py  test_toc.py
