[project]
name = "calpdf"
version = "0.1.0"
description = "Simple PDF toolkit for Calibre library management"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
keywords = ["pdf", "calibre", "cover", "toc", "optimize"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = ["pikepdf", "Pillow", "img2pdf", "typer", "requests", "rich"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
calpdf = "calpdf.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calpdf"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest"]
